kubernetes/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontendwsock
spec:
  selector:
    matchLabels:
      app: frontendwsock
  template:
    metadata:
      labels:
        app: frontendwsock
    spec:
      containers:
        - name: frontendwsock
          image: ragatzino/frontend-archiexemplewsock:1.0.0
          resources:
            limits:
              memory: "200Mi"
              cpu: "300m"
          ports:
            - containerPort: 5173
