kubernetes/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontendwsock
spec:
  selector:
    app: frontendwsock
  ports:
    - port: 80
      targetPort: 5173
