kubernetes/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontendwsock
  labels:
    name: frontendwsock 
spec:
  rules:
    - host: archi-exemple-wsock-frontend.kub.sspcloud.fr
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: frontendwsock 
                port:
                  number: 80
